# ethnic-bias-court

./: .env.example  .gitignore  pyproject.toml
.claude/skills/analyze-bias-eval/: SKILL.md
data/cache/: genders.jsonl  genders_old.jsonl
data/names/: groups.yaml  groups_api.yaml  groups_raw_api.yaml
notebooks/: bias_comparison.ipynb
scripts/: detect_genders.py  run_evals.sh
src/scb/: deanon.py  gender.py  models.py  names.py
src/scb/tasks/: bias_eval.py  translation.py
tests/: test_names.py
